clusters/aks-az01-dev-koko-01/awesome/temp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: awesome
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-account
    env: prd
    system: awesome
  name: awesome-account
  namespace: awesome
spec:
  ports:
  - name: awesome
    port: 8080
    targetPort: 8080
  selector:
    app: awesome-account
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-apigateway
    env: prd
    system: awesome
  name: awesome-apigateway
  namespace: awesome
spec:
  ports:
  - name: awesome
    port: 8080
    targetPort: 8080
  selector:
    app: awesome-apigateway
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-bff
    env: prd
    system: awesome
  name: awesome-bff
  namespace: awesome
spec:
  ports:
  - name: awesome
    port: 8080
    targetPort: 8080
  selector:
    app: awesome-bff
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-cart
    env: prd
    system: awesome
  name: awesome-cart
  namespace: awesome
spec:
  ports:
  - name: awesome
    port: 8080
    targetPort: 8080
  selector:
    app: awesome-cart
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-order
    env: prd
    system: awesome
  name: awesome-order
  namespace: awesome
spec:
  ports:
  - name: awesome
    port: 8080
    targetPort: 8080
  selector:
    app: awesome-order
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-payment
    env: prd
    system: awesome
  name: awesome-payment
  namespace: awesome
spec:
  ports:
  - name: awesome
    port: 8080
    targetPort: 8080
  selector:
    app: awesome-payment
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-product
    env: prd
    system: awesome
  name: awesome-product
  namespace: awesome
spec:
  ports:
  - name: awesome
    port: 8080
    targetPort: 8080
  selector:
    app: awesome-product
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-rabbitmq-consumer
    env: prd
    system: awesome
  name: awesome-rabbitmq-consumer
  namespace: awesome
spec:
  ports:
  - name: awesome
    port: 8080
    targetPort: 8080
  selector:
    app: awesome-rabbitmq-consumer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awesome-account
    env: prd
    system: awesome
  name: awesome-account
  namespace: awesome
spec:
  selector:
    matchLabels:
      app: awesome-account
  template:
    metadata:
      labels:
        app: awesome-account
        env: prd
        system: awesome
    spec:
      containers:
      - env:
        - name: JDK_JAVA_OPTIONS
          value: -XX:+UseContainerSupport -javaagent:/app/bin/opentelemetry-javaagent.jar
        - name: OTEL_EXPORTER_OTLP_ENDPOINT
          value: http://otel-apps.otel-collector:4318
        - name: OTEL_SERVICE_NAME
          value: awesome-account
        - name: OTEL_RESOURCE_ATTRIBUTES
          value: service.namespace=awesome
        - name: OTEL_INSTRUMENTATION_COMMON_DEFAULT_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_SPRING_BOOT_ACTUATOR_AUTOCONFIGURE_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_MICROMETER_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_LOGBACK_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_COMMON_EXPERIMENTAL_CONTROLLER_TELEMETRY_ENABLED
          value: "false"
        - name: OTEL_INSTRUMENTATION_RABBITMQ_EXPERIMENTAL_SPAN_ATTRIBUTES
          value: "true"
        image: noisonnoiton/awesome-account:latest
        name: springboot
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /config
          name: config
          readOnly: true
      tolerations:
      - key: MGMT
        operator: Exists
      volumes:
      - configMap:
          items:
          - key: application.yml
            path: application.yml
          - key: application-prd.yml
            path: application-prd.yml
          - key: data-mysql.sql
            path: data-mysql.sql
          - key: mybatis-config-mysql.xml
            path: mybatis-config-mysql.xml
          name: config-account
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awesome-apigateway
    env: prd
    system: awesome
  name: awesome-apigateway
  namespace: awesome
spec:
  selector:
    matchLabels:
      app: awesome-apigateway
  template:
    metadata:
      labels:
        app: awesome-apigateway
        env: prd
        system: awesome
    spec:
      containers:
      - env:
        - name: JDK_JAVA_OPTIONS
          value: -XX:+UseContainerSupport -javaagent:/app/bin/opentelemetry-javaagent.jar
        - name: OTEL_EXPORTER_OTLP_ENDPOINT
          value: http://otel-apps.otel-collector:4318
        - name: OTEL_SERVICE_NAME
          value: awesome-apigateway
        - name: OTEL_RESOURCE_ATTRIBUTES
          value: service.namespace=awesome
        - name: OTEL_INSTRUMENTATION_COMMON_DEFAULT_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_SPRING_BOOT_ACTUATOR_AUTOCONFIGURE_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_MICROMETER_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_LOGBACK_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_COMMON_EXPERIMENTAL_CONTROLLER_TELEMETRY_ENABLED
          value: "false"
        image: noisonnoiton/awesome-apigateway:latest
        name: springboot
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /config
          name: config
          readOnly: true
      tolerations:
      - key: MGMT
        operator: Exists
      volumes:
      - configMap:
          items:
          - key: application.yml
            path: application.yml
          - key: application-prd.yml
            path: application-prd.yml
          name: config-apigateway
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awesome-bff
    env: prd
    system: awesome
  name: awesome-bff
  namespace: awesome
spec:
  selector:
    matchLabels:
      app: awesome-bff
  template:
    metadata:
      labels:
        app: awesome-bff
        env: prd
        system: awesome
    spec:
      containers:
      - env:
        - name: JDK_JAVA_OPTIONS
          value: -XX:+UseContainerSupport -javaagent:/app/bin/opentelemetry-javaagent.jar
        - name: OTEL_EXPORTER_OTLP_ENDPOINT
          value: http://otel-apps.otel-collector:4318
        - name: OTEL_SERVICE_NAME
          value: awesome-bff
        - name: OTEL_RESOURCE_ATTRIBUTES
          value: service.namespace=awesome
        - name: OTEL_INSTRUMENTATION_COMMON_DEFAULT_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_SPRING_BOOT_ACTUATOR_AUTOCONFIGURE_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_MICROMETER_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_LOGBACK_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_COMMON_EXPERIMENTAL_CONTROLLER_TELEMETRY_ENABLED
          value: "false"
        image: noisonnoiton/awesome-bff:latest
        name: springboot
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /config
          name: config
          readOnly: true
      tolerations:
      - key: MGMT
        operator: Exists
      volumes:
      - configMap:
          items:
          - key: application.yml
            path: application.yml
          - key: application-prd.yml
            path: application-prd.yml
          name: config-bff
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awesome-cart
    env: prd
    system: awesome
  name: awesome-cart
  namespace: awesome
spec:
  selector:
    matchLabels:
      app: awesome-cart
  template:
    metadata:
      labels:
        app: awesome-cart
        env: prd
        system: awesome
    spec:
      containers:
      - env:
        - name: JDK_JAVA_OPTIONS
          value: -XX:+UseContainerSupport -javaagent:/app/bin/opentelemetry-javaagent.jar
        - name: OTEL_EXPORTER_OTLP_ENDPOINT
          value: http://otel-apps.otel-collector:4318
        - name: OTEL_SERVICE_NAME
          value: awesome-cart
        - name: OTEL_RESOURCE_ATTRIBUTES
          value: service.namespace=awesome
        - name: OTEL_INSTRUMENTATION_COMMON_DEFAULT_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_SPRING_BOOT_ACTUATOR_AUTOCONFIGURE_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_MICROMETER_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_LOGBACK_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_COMMON_EXPERIMENTAL_CONTROLLER_TELEMETRY_ENABLED
          value: "false"
        - name: OTEL_INSTRUMENTATION_RABBITMQ_EXPERIMENTAL_SPAN_ATTRIBUTES
          value: "true"
        image: noisonnoiton/awesome-cart:latest
        name: springboot
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /config
          name: config
          readOnly: true
      tolerations:
      - key: MGMT
        operator: Exists
      volumes:
      - configMap:
          items:
          - key: application.yml
            path: application.yml
          - key: application-prd.yml
            path: application-prd.yml
          - key: data-mysql.sql
            path: data-mysql.sql
          - key: mybatis-config-mysql.xml
            path: mybatis-config-mysql.xml
          name: config-cart
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awesome-order
    env: prd
    system: awesome
  name: awesome-order
  namespace: awesome
spec:
  selector:
    matchLabels:
      app: awesome-order
  template:
    metadata:
      labels:
        app: awesome-order
        env: prd
        system: awesome
    spec:
      containers:
      - env:
        - name: JDK_JAVA_OPTIONS
          value: -XX:+UseContainerSupport -javaagent:/app/bin/opentelemetry-javaagent.jar
        - name: OTEL_EXPORTER_OTLP_ENDPOINT
          value: http://otel-apps.otel-collector:4318
        - name: OTEL_SERVICE_NAME
          value: awesome-order
        - name: OTEL_RESOURCE_ATTRIBUTES
          value: service.namespace=awesome
        - name: OTEL_INSTRUMENTATION_COMMON_DEFAULT_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_SPRING_BOOT_ACTUATOR_AUTOCONFIGURE_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_MICROMETER_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_LOGBACK_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_COMMON_EXPERIMENTAL_CONTROLLER_TELEMETRY_ENABLED
          value: "false"
        - name: OTEL_INSTRUMENTATION_RABBITMQ_EXPERIMENTAL_SPAN_ATTRIBUTES
          value: "true"
        image: noisonnoiton/awesome-order:latest
        name: springboot
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /config
          name: config
          readOnly: true
      tolerations:
      - key: MGMT
        operator: Exists
      volumes:
      - configMap:
          items:
          - key: application.yml
            path: application.yml
          - key: application-prd.yml
            path: application-prd.yml
          - key: data-mysql.sql
            path: data-mysql.sql
          - key: mybatis-config-mysql.xml
            path: mybatis-config-mysql.xml
          name: config-order
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awesome-payment
    env: prd
    system: awesome
  name: awesome-payment
  namespace: awesome
spec:
  selector:
    matchLabels:
      app: awesome-payment
  template:
    metadata:
      labels:
        app: awesome-payment
        env: prd
        system: awesome
    spec:
      containers:
      - env:
        - name: JDK_JAVA_OPTIONS
          value: -XX:+UseContainerSupport -javaagent:/app/bin/opentelemetry-javaagent.jar
        - name: OTEL_EXPORTER_OTLP_ENDPOINT
          value: http://otel-apps.otel-collector:4318
        - name: OTEL_SERVICE_NAME
          value: awesome-payment
        - name: OTEL_RESOURCE_ATTRIBUTES
          value: service.namespace=awesome
        - name: OTEL_INSTRUMENTATION_COMMON_DEFAULT_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_SPRING_BOOT_ACTUATOR_AUTOCONFIGURE_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_MICROMETER_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_LOGBACK_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_COMMON_EXPERIMENTAL_CONTROLLER_TELEMETRY_ENABLED
          value: "false"
        - name: OTEL_INSTRUMENTATION_RABBITMQ_EXPERIMENTAL_SPAN_ATTRIBUTES
          value: "true"
        image: noisonnoiton/awesome-payment:latest
        name: springboot
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /config
          name: config
          readOnly: true
      tolerations:
      - key: MGMT
        operator: Exists
      volumes:
      - configMap:
          items:
          - key: application.yml
            path: application.yml
          - key: application-prd.yml
            path: application-prd.yml
          - key: data-mysql.sql
            path: data-mysql.sql
          - key: mybatis-config-mysql.xml
            path: mybatis-config-mysql.xml
          name: config-payment
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awesome-product
    env: prd
    system: awesome
  name: awesome-product
  namespace: awesome
spec:
  selector:
    matchLabels:
      app: awesome-product
  template:
    metadata:
      labels:
        app: awesome-product
        env: prd
        system: awesome
    spec:
      containers:
      - env:
        - name: JDK_JAVA_OPTIONS
          value: -XX:+UseContainerSupport -javaagent:/app/bin/opentelemetry-javaagent.jar
        - name: OTEL_EXPORTER_OTLP_ENDPOINT
          value: http://otel-apps.otel-collector:4318
        - name: OTEL_SERVICE_NAME
          value: awesome-product
        - name: OTEL_RESOURCE_ATTRIBUTES
          value: service.namespace=awesome
        - name: OTEL_INSTRUMENTATION_COMMON_DEFAULT_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_SPRING_BOOT_ACTUATOR_AUTOCONFIGURE_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_MICROMETER_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_LOGBACK_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_COMMON_EXPERIMENTAL_CONTROLLER_TELEMETRY_ENABLED
          value: "false"
        - name: OTEL_INSTRUMENTATION_RABBITMQ_EXPERIMENTAL_SPAN_ATTRIBUTES
          value: "true"
        image: noisonnoiton/awesome-product:latest
        name: springboot
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /config
          name: config
          readOnly: true
      tolerations:
      - key: MGMT
        operator: Exists
      volumes:
      - configMap:
          items:
          - key: application.yml
            path: application.yml
          - key: application-prd.yml
            path: application-prd.yml
          - key: data-mysql.sql
            path: data-mysql.sql
          - key: mybatis-config-mysql.xml
            path: mybatis-config-mysql.xml
          name: config-product
        name: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awesome-rabbitmq-consumer
    env: prd
    system: awesome
  name: awesome-rabbitmq-consumer
  namespace: awesome
spec:
  selector:
    matchLabels:
      app: awesome-rabbitmq-consumer
  template:
    metadata:
      labels:
        app: awesome-rabbitmq-consumer
        env: prd
        system: awesome
    spec:
      containers:
      - env:
        - name: JDK_JAVA_OPTIONS
          value: -XX:+UseContainerSupport -javaagent:/app/bin/opentelemetry-javaagent.jar
        - name: OTEL_EXPORTER_OTLP_ENDPOINT
          value: http://otel-apps.otel-collector:4318
        - name: OTEL_SERVICE_NAME
          value: awesome-rabbitmq-consumer
        - name: OTEL_RESOURCE_ATTRIBUTES
          value: service.namespace=awesome
        - name: OTEL_INSTRUMENTATION_COMMON_DEFAULT_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_SPRING_BOOT_ACTUATOR_AUTOCONFIGURE_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_MICROMETER_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_LOGBACK_ENABLED
          value: "true"
        - name: OTEL_INSTRUMENTATION_COMMON_EXPERIMENTAL_CONTROLLER_TELEMETRY_ENABLED
          value: "false"
        - name: OTEL_INSTRUMENTATION_RABBITMQ_EXPERIMENTAL_SPAN_ATTRIBUTES
          value: "true"
        image: noisonnoiton/awesome-rabbitmq-consumer:latest
        name: springboot
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /config
          name: config
          readOnly: true
      tolerations:
      - key: MGMT
        operator: Exists
      volumes:
      - configMap:
          items:
          - key: application.yml
            path: application.yml
          - key: application-prd.yml
            path: application-prd.yml
          name: config-rabbitmq-consumer
        name: config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  labels:
    app: awesome-apigateway
    env: prd
    system: awesome
  name: awesome-apigateway-apigateway
  namespace: awesome
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: apigateway.awesome.kubepia.net
    http:
      paths:
      - backend:
          service:
            name: awesome-apigateway
            port:
              number: 8080
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  labels:
    app: awesome-bff
    env: prd
    system: awesome
  name: awesome-bff-bff
  namespace: awesome
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: awesome.kubepia.net
    http:
      paths:
      - backend:
          service:
            name: awesome-bff
            port:
              number: 8080
        path: /
        pathType: Prefix
